[package]
name = "fork"
version = "0.3.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Library for creating a new process detached from the controlling terminal (daemon)"
documentation = "https://docs.rs/fork/latest/fork/"
homepage = "https://docs.rs/fork/latest/fork/"
repository = "https://github.com/immortal/fork"
readme = "README.md"
keywords = ["fork", "setsid", "daemon", "process", "daemonize"]
categories = ["command-line-utilities", "os"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
libc = "0.2"

[dev-dependencies]
os_pipe = "1.2"
